tests/other-tests/tests/expand/fail/garbage.expand.err.txt
error: expected one of `!` or `::`, found `<eof>`
 --> /tests/expand/fail/garbage.rs:1:1
  |
1 | qwertyuiop
  | ^^^^^^^^^^ expected one of `!` or `::`
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
